[package]
name = "triangle_problem"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.4"
crossterm = "0.29.0"
indicatif = "0.17.11"
petgraph = "0.7.1"
rand = "0.9.0"
ratatui = "0.29.0"
